--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,9 +35,11 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/MessageApplication
 endorsed.classpath=
 excludes=
+file.reference.mariadb-java-client-3.5.6.jar=/home/theunknown/Downloads/mariadb-java-client-3.5.6.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.mariadb-java-client-3.5.6.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
