--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,11 +35,13 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/MessageApplication
 endorsed.classpath=
 excludes=
-file.reference.mariadb-java-client-3.5.6.jar=/home/theunknown/Downloads/mariadb-java-client-3.5.6.jar
+file.reference.mariadb-java-client-3.5.6.jar=dist/lib/mariadb-java-client-3.5.6.jar
+file.reference.mariadb-java-client-3.5.6.jar-1=/home/theunknown/Downloads/mariadb-java-client-3.5.6.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mariadb-java-client-3.5.6.jar}
+    ${file.reference.mariadb-java-client-3.5.6.jar}:\
+    ${file.reference.mariadb-java-client-3.5.6.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
