added support for mysql servers
added "add contacts" button

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,10 +36,14 @@ dist.jlink.output=${dist.jlink.dir}/MessageApplication
 endorsed.classpath=
 excludes=
 file.reference.mariadb-java-client-3.5.6.jar-1=/home/theunknown/Downloads/mariadb-java-client-3.5.6.jar
+file.reference.mysql-connector-j-9.5.0.jar=/home/theunknown/Downloads/mysql-connector-j-9.5.0.jar
+file.reference.protobuf-java-4.31.1.jar=/home/theunknown/Downloads/protobuf-java-4.31.1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mariadb-java-client-3.5.6.jar-1}
+    ${file.reference.mariadb-java-client-3.5.6.jar-1}:\
+    ${file.reference.mysql-connector-j-9.5.0.jar}:\
+    ${file.reference.protobuf-java-4.31.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
